[tool.poetry]
name = "mathjoon"
version = "0.1.0"
description = "Mathematics problems"
authors = ["Joonhyung Shin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
coverage = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
